--- a/tables.html
+++ b/tables.html
@@ -11,6 +11,29 @@
 
   <table>
     <!-- Table Head -->
+     <thead>
+        <tr>
+            <th>Name</th>
+            <th>Class</th>
+            <th>Subject</th>
+            <th>Roll no</th>
+         </tr>
+     </thead>
+     <tbody>
+        <tr>
+            <td>test 1</td>
+            <td>test 2</td>
+            <td>test 3</td>
+            <td>test 4</td>
+        </tr>
+        <tr>
+            <td>test 1</td>
+            <td>test 2</td>
+            <td>test 3</td>
+            <td>test 4</td>
+        </tr>
+     </tbody>
+    
   </table>
 </body>
 </html>
